# app/Http/Requests/IndexCommentRequest.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Http\Requests;
+
+class IndexCommentRequest extends IndexRequest
+{
+    public function rules(): array
+    {
+        return [
+            'product' => "required|string|in:Gesrest,360sys,HotelHUB,Comprobante-e,Mr. Soft",
+            'limit' => "nullable|integer|min:1",
+        ];
+    }
+}
