# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\ClientController;
+use App\Http\Controllers\CommentController;
 use App\Http\Controllers\NewsController;
 use App\Http\Controllers\ReelController;
 use Illuminate\Http\Request;
@@ -33,3 +34,6 @@ Route::resource('reel', ReelController::class)->only(['index', 'show', 'store', 
 
 Route::resource('client', ClientController::class)->only(['index', 'show', 'store', 'update', 'destroy'])
     ->names(['index' => 'client.index', 'store' => 'client.store', 'show' => 'client.show', 'update' => 'client.update', 'destroy' => 'client.destroy']);
+
+Route::resource('comment', CommentController::class)->only(['index', 'show', 'store', 'update', 'destroy'])
+    ->names(['index' => 'comment.index', 'store' => 'comment.store', 'show' => 'comment.show', 'update' => 'comment.update', 'destroy' => 'comment.destroy']);
